[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "pybind11",
    "scikit-build-core",
    "cmake"
]
build-backend = "scikit_build_core.build"

[project]
name = "hermespy"
version = "1.3.0"
authors = [
    {name = "Jan Adler", email ="jan.adler@barkhauseninstitut.org"},
]
maintainers = [
    {name = "Jan Adler", email = "jan.adler@barkhauseninstitut.org"},
]
description = "The Heterogeneous Radio Mobile Simulator"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = [
    "simulation", "link-level", "communication", "radar", "channel",
    "signal processing", "MIMO", "monte carlo",
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy>=1.25.2",
    "matplotlib>=3.8.0",
    "h5py>=3.8.0",
    "scipy>=1.1.3",
    "pybind11>=2.10.4",
    "ray>=2.7.0",
    "ruamel.yaml>=0.17.32",
    "sparse>=0.14.0",
    "numba>=0.58.0",
    "nptyping>=2.5.0",
    "rich>=13.6.0",
]

[project.urls]
Documentation = "https://hermespy.org/"
Repository = "https://github.com/Barkhausen-Institut/hermespy.git"
"Bug Tracker" = "https://github.com/Barkhausen-Institut/hermespy/issues"

[project.scripts]
hermes = "hermespy.bin:hermes_simulation"

[project.optional-dependencies]
test = [
    "pytest>=7.4.2",
    "coverage>=7.5.1",
    "mypy>=1.3.0,<1.7.0",
    "nbformat",
    "nbconvert",
]
quadriga = [
    "oct2py>=5.6.0",
]
documentation = [
    "sphinx>=7.0.1",
    "furo>=2023.9.10",
    "sphinx-autodoc-typehints>=1.23.0",
    "sphinxcontrib-apidoc>=0.4.0",
    "sphinxcontrib-mermaid>=0.9.2",
    "sphinxcontrib-bibtex>=2.5.0",
    "sphinx-tabs>=3.4.1",
    "sphinx-copybutton>=0.5.2",
    "sphinx-carousel>=1.2.0",
    "nbsphinx>=0.9.2",
    "ipywidgets>=8.1.1",
]
uhd = [
    "usrp-uhd-client==1.7.3",
]
audio = [
    "sounddevice>=0.4.6",
]
develop = [
    "pybind11>=2.10.4",
    "scikit-build>=0.17.6",
    "cmake>=3.27.2",
    "wheel>=0.41.2",
    "black>=24.4.2",
    "flake8>=6.0.0",
    "coverage>=7.2.7",
    "mypy>=1.3.0",
]
sionna = [
    "sionna>=0.17.0",
]

[tool.scikit-build]
cmake.verbose = true
ninja.make-fallback = true
logging.level = "INFO"
sdist.include = []
sdist.exclude = ["_examples/", "docssource/", "scripts/", "submodules/quadriga", ".flake8", ".git*"]
sdist.reproducible = true
sdist.cmake = true
wheel.packages = ["hermespy", "hermespy/*"]
wheel.license-files = ["LICENSE"]
wheel.cmake = true
experimental = true
build-dir = "build/{wheel_tag}"
strict-config = true

[tool.black]
line-length = 100
target-version = ['py39']

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*__init__.py*",
]

[tool.mypy] 
namespace_packages = true 
strict_optional = false
no_implicit_optional = true
explicit_package_bases = true
packages = "hermespy.beamforming, hermespy.bin, hermespy.channel, hermespy.core, hermespy.fec, hermespy.hardware_loop, hermespy.jcas, hermespy.modem, hermespy.precoding, hermespy.radar, hermespy.simulation, hermespy.tools"
plugins = "numpy.typing.mypy_plugin"

[[tool.mypy.overrides]]
module = "numpy.*,scipy.*,oct2py.*,matlab.*,matplotlib.*,ruamel.*,numba.*,h5py.*,hermespy.fec.aff3ct.*,zerorpc.*,sounddevice.*,usrp_client.*,uhd_wrapper.*"
ignore_missing_imports = true

[bumpver]
current_version = "1.3.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump to version {new_version}"
commit = false
tag = false
push = false

[bumpver.file_patterns]
# Root directory files
"README.md" = [ "{version}" ]
"pyproject.toml" = [ 'current_version = "{version}"', 'version = "{version}"' ]
".gitlab-ci.yml" = [ 'HERMES_VERSION: "{version}"' ]

# Source files
"hermespy/beamforming/*.py" = [ '__version__ = "{version}"' ]
"hermespy/bin/*.py" = [ '__version__ = "{version}"' ]
"hermespy/channel/*.py" = [ '__version__ = "{version}"' ]
"hermespy/channel/cdl/*.py" = [ '__version__ = "{version}"' ]
"hermespy/channel/delay/*.py" = [ '__version__ = "{version}"' ]
"hermespy/channel/fading/*.py" = [ '__version__ = "{version}"' ]
"hermespy/channel/quadriga/*.py" = [ '__version__ = "{version}"' ]
"hermespy/channel/radar/*.py" = [ '__version__ = "{version}"' ]
"hermespy/core/*.py" = [ '__version__ = "{version}"' ]
"hermespy/fec/*.py" = [ '__version__ = "{version}"' ]
"hermespy/hardware_loop/*.py" = [ '__version__ = "{version}"' ]
"hermespy/hardware_loop/audio/*.py" = [ '__version__ = "{version}"' ]
"hermespy/hardware_loop/calibration/*.py" = [ '__version__ = "{version}"' ]
"hermespy/hardware_loop/uhd/*.py" = [ '__version__ = "{version}"' ]
"hermespy/jcas/*.py" = [ '__version__ = "{version}"' ]
"hermespy/modem/*.py" = [ '__version__ = "{version}"' ]
"hermespy/modem/precoding/*.py" = [ '__version__ = "{version}"' ]
"hermespy/modem/tools/*.py" = [ '__version__ = "{version}"' ]
"hermespy/modem/waveforms/*.py" = [ '__version__ = "{version}"' ]
"hermespy/modem/waveforms/orthogonal/*.py" = [ '__version__ = "{version}"' ]
"hermespy/precoding/*.py" = [ '__version__ = "{version}"' ]
"hermespy/radar/*.py" = [ '__version__ = "{version}"' ]
"hermespy/simulation/*.py" = [ '__version__ = "{version}"' ]
"hermespy/simulation/coupling/*.py" = [ '__version__ = "{version}"' ]
"hermespy/simulation/isolation/*.py" = [ '__version__ = "{version}"' ]
"hermespy/simulation/modem/*.py" = [ '__version__ = "{version}"' ]
"hermespy/simulation/noise/*.py" = [ '__version__ = "{version}"' ]
"hermespy/simulation/rf_chain/*.py" = [ '__version__ = "{version}"' ]
"hermespy/tools/*.py" = [ '__version__ = "{version}"' ]

# Test files
"tests/integration_tests/*.py" = [ '__version__ = "{version}"' ]
"tests/integrity_tests/documentation/*.py" = [ '__version__ = "{version}"' ]
"tests/integrity_tests/examples/*.py" = [ '__version__ = "{version}"' ]
"tests/unit_tests/bin/*.py" = [ '__version__ = "{version}"' ]
"tests/unit_tests/beamforming/*.py" = [ '__version__ = "{version}"' ]
"tests/unit_tests/channel/*.py" = [ '__version__ = "{version}"' ]
"tests/unit_tests/core/*.py" = [ '__version__ = "{version}"' ]
"tests/unit_tests/fec/*.py" = [ '__version__ = "{version}"' ]
"tests/unit_tests/hardware_loop/*.py" = [ '__version__ = "{version}"' ]
"tests/unit_tests/hardware_loop/audio/*.py" = [ '__version__ = "{version}"' ]
"tests/unit_tests/hardware_loop/calibration/*.py" = [ '__version__ = "{version}"' ]
"tests/unit_tests/hardware_loop/uhd/*.py" = [ '__version__ = "{version}"' ]
"tests/unit_tests/jcas/*.py" = [ '__version__ = "{version}"' ]
"tests/unit_tests/modem/*.py" = [ '__version__ = "{version}"' ]
"tests/unit_tests/modem/precoding/*.py" = [ '__version__ = "{version}"' ]
"tests/unit_tests/modem/tools/*.py" = [ '__version__ = "{version}"' ]
"tests/unit_tests/modem/waveforms/*.py" = [ '__version__ = "{version}"' ]
"tests/unit_tests/modem/waveforms/orthogonal/*.py" = [ '__version__ = "{version}"' ]
"tests/unit_tests/precoding/*.py" = [ '__version__ = "{version}"' ]
"tests/unit_tests/radar/*.py" = [ '__version__ = "{version}"' ]
"tests/unit_tests/simulation/*.py" = [ '__version__ = "{version}"' ]
"tests/unit_tests/simulation/coupling/*.py" = [ '__version__ = "{version}"' ]
"tests/unit_tests/simulation/isolation/*.py" = [ '__version__ = "{version}"' ]
"tests/unit_tests/simulation/modem/*.py" = [ '__version__ = "{version}"' ]
"tests/unit_tests/simulation/noise/*.py" = [ '__version__ = "{version}"' ]
"tests/unit_tests/simulation/rf_chain/*.py" = [ '__version__ = "{version}"' ]
"tests/unit_tests/tools/*.py" = [ '__version__ = "{version}"' ]
"tests/unit_tests/*.py" = [ '__version__ = "{version}"' ]
